feat(coordinator): establish tcp connections for all nodes